# Excerpt

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake-multi-platform.yml  test.yml
include/excerpt/: argparser.hpp  token.hpp  tokenizer.hpp
include/excerpt_utils/: argparser.hpp  logger.hpp
src/: main.cpp  tokenizer.cpp
tests/: CMakeLists.txt  ExcerptTests[1]_include.cmake  argparser_test.cpp
tests/excerpt/: argparser_test.cpp  token_test.cpp  tokenizer_test.cpp
tests/excerpt_utils/: logger_test.cpp
